# mamba-kan-anomaly

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docker/: Dockerfile
mamba-kan-anomaly-detection/: .gitignore  LICENSE
mamba-kan-anomaly-detection/dashboard/: app.py
mamba-kan-anomaly-detection/src/: __init__.py
mamba-kan-anomaly-detection/src/evaluation/: __init__.py  benchmark.py
mamba-kan-anomaly-detection/src/models/: __init__.py  kan_encoder.py  mamba_kan.py
mamba-kan-anomaly-detection/src/models/baselines/: lstm.py
mamba-kan-anomaly-detection/src/serving/: api.py
mamba-kan-anomaly-detection/src/training/: metrics.py
mamba-kan-anomaly-detection/tests/: test_data.py
src/data/: __init__.py  loader.py  preprocessing.py
src/evaluation/: visualize.py
src/models/: mamba_block.py
src/models/baselines/: __init__.py  transformer.py
src/serving/: __init__.py
src/training/: __init__.py  trainer.py
tests/: test_models.py
